Use "kbytes" instead of "blocks" in messages as this is really what is calculated.

PR:		41936
Submitted by:	Lukas Ertl <le@univie.ac.at>
MFC after:	1 week

Former-commit-id: 07c1446f5c44343b2ab686d4a38abe10af8b2ea3